--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	   <nav>
+	  <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
