--- a/main.html
+++ b/main.html
@@ -10,9 +10,19 @@
 	<!-- the entire body must be written by student -->
 	  <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li>
+				<a href="index.html">Home</a>
+			</li>
+			  </ul>
+		  <ul>
+            <li>
+				<a href="about.html">About</a>
+			</li>
+		    </ul>
+		  <ul>
+            <li>
+				<a href="contact.html">Contact</a>
+			</li>
         </ul>
     </nav>
 
